# schwitzerflut

./: Cargo.toml  README.md  flake.nix  schwitzerflut-client.AppImage
.github/workflows/: ci.yml  flake-update.yml  update.yml
crates/schwitzerflut-client/: Cargo.toml
crates/schwitzerflut-client/src/: main.rs  source.rs  stream.rs
crates/schwitzerflut-client/src/command_generator/: image.rs  mod.rs  shard.rs
crates/schwitzerflut-protocol/: Cargo.toml
crates/schwitzerflut-protocol/src/: color.rs  command.rs  coordinates.rs  lib.rs
crates/schwitzerflut-renderer/: Cargo.toml
crates/schwitzerflut-server/: Cargo.toml
