[package]
name = "schwitzerflut-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive", "env"] }
image = "0.25.5"
schwitzerflut-protocol = { path = "../schwitzerflut-protocol" }
tokio = { version = "1.42.0", features = ["full"] }
